--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,6 +3,10 @@ body{
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,96,121,1) 0%, rgba(0,212,255,1) 100%);
 }
 
+.search{
+    margin-top: 50px;
+}
+
 .search button{
     border: 0;
     outline: 0;
@@ -18,13 +22,26 @@ body{
     height: 17px;
 }
 
-.search input{
+.search .city{
     border: 0;
     outline: 0;
     background: #ebfffc;
     padding: 10px 20px ;
     height: 40px;
     width: 500px;
+    border-radius: 30px;
+    margin-right: 15px;
+    font-size: 18px;
+}
+
+
+.search .statecode{
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    padding: 10px 20px ;
+    height: 40px;
+    width: 250px;
     border-radius: 30px;
     margin-right: 15px;
     font-size: 18px;
