--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,12 +19,53 @@
     </form>
 
     <div>
-      <img src="/images/clouds.png" alt="">
+      <%
+        switch(true) {
+          case weatherId >= 200 && weatherId <= 232:
+            %>
+            <img src="/images/rain.png" alt="">
+            <%
+            break;
+          case weatherId >= 300 && weatherId <= 321:
+            %>
+            <img src="/images/drizzle.png" alt="">
+            <%
+            break;
+          case weatherId >= 500 && weatherId <= 531:
+            %>
+            <img src="/images/rain.png" alt="">
+            <%
+            break;
+          case weatherId >= 600 && weatherId <= 622:
+            %>
+            <img src="/images/snow.png" alt="">
+            <%
+            break;
+          case weatherId == 800:
+            %>
+            <img src="/images/clear.png" alt="">
+            <%
+            break;
+          case weatherId >= 801 && weatherId <= 804:
+            %>
+            <img src="/images/clouds.png" alt="">
+            <%
+            break;
+          default:
+            %>
+            <img src="/images/clouds.png" alt="">
+            <%
+        }
+        %>
       <% if (locals.temp) { %>
           <h2><%= temp %>°F</h2>
       <% } else {%>
         <h2>No city currently inputed</h2>
         <%  } %>
+    </div>
+
+    <div>
+      <%= time %>
     </div>
   </div>
   
