--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,10 +1,17 @@
 body{
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,96,121,1) 0%, rgba(0,212,255,1) 100%);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
 
 .search{
     margin-top: 50px;
+}
+
+.images img{
+    height: 300px;
+    width: 300px;
 }
 
 .search button{
@@ -34,7 +41,6 @@ body{
     font-size: 16px;
 }
 
-
 .search .statecode{
     border: 0;
     outline: 0;
@@ -45,4 +51,13 @@ body{
     border-radius: 30px;
     margin-right: 15px;
     font-size: 16px;
+}
+
+.format{
+    color: #ebfffc;
+}
+
+#time{
+    font-size: 100px;
+    color: #ebfffc;
 }
